Ensure tables do not wrap

--- a/src/scss/_modules.scss
+++ b/src/scss/_modules.scss
@@ -60,8 +60,11 @@
       padding: 6px 12px;
       border: 1px solid #ddd;
     }
-  }
 
+    td:first-child {
+      white-space: nowrap;
+    }  
+  }
 }
 
 .sidebar {
