--- a/src/scss/_normalize.scss
+++ b/src/scss/_normalize.scss
@@ -502,3 +502,7 @@ table {
     border-collapse: collapse;
     border-spacing: 0;
 }
+
+table tr td:first-child {
+    white-space: nowrap;
+}
